[package]
name = "metatag_image_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid = "0.26.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
resvg = "0.33.0"
tiny-skia = "0.9.1"
usvg = "0.33.0"
webp = "0.2.2"
