[package]
authors = ["Gavin Daly <408519+gavdaly@users.noreply.github.com>"]
edition = "2018"
name = "phone_check"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}
scraper = "0.20.0"
surf = "2.3.1"
tide = "0.16"
